[gd_scene load_steps=2 format=3 uid="uid://bonkjlw05a46h"]

[ext_resource type="Script" uid="uid://c2fcjcvs8s3un" path="res://Code/WorldCard.gd" id="1_i3lrt"]

[node name="WorldCard" type="PanelContainer"]
offset_right = 650.0
offset_bottom = 94.0
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("1_i3lrt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="WorldName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Title"
text = "WORLDNAME"

[node name="WorldInfo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Title"
text = "已过去%s天 | ￥%s"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "载入"

[node name="Del" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"SubButton"
text = "删除"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Load" to="." method="WhenLoadButtonClicked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Del" to="." method="WhenDelButtonClicked"]
